--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@ meta: Discover me through portfolio
 						<div>
 						{% for post in site.posts limit: 4 %}
 							{% for tag in post.tags %}
-							<span><a href="{{site.baseurl}}/tags/{{tag}}" class="btn btn-primary btn-selected waves-effect waves-light">{{ tag }}</a></span>
+							<span><a href="{{site.baseurl}}/?q={{tag}}" class="btn btn-primary btn-selected waves-effect waves-light">{{ tag }}</a></span>
 							{% endfor %}
 						{% endfor %}
 						</div>
