--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ meta: Discover me through portfolio
 		<div class="row">
 			
 				<div class="jumbotron">
-					<div class="container">
+					<div class="container-fluid">
 					<div class="col-md-4">
 							<img class="img-thumbnail img-responsive center-block img-fluid" src="{{site.baseurl}}/img/jumbotron/thumb_1.png"></img>
 					</div>
