added more earlier projects and update look/feel

--- a/about.html
+++ b/about.html
@@ -18,13 +18,16 @@ meta: Discover me through portfolio
 					
 					<div class="col-md-8">
 						<h2 class="h2-responsive">Joseph Kamau</h2>
-						<h4>Web/Mobile app Developer | Data analyst | White Hat Pentester</h4>
+						<h4>Fullstack Web/Mobile developer | Data analyst | Computer security enthusiast</h4>
 						<br />
 						<div class="social-icons">
-							<span><a href="www.facebook.com/"><img src="{{site.baseurl}}/img/icons/icon-facebook.png" alt="Facebook" /></a></span>
-							<span><a href="www.google.com"><img src="{{site.baseurl}}/img/icons/icon-google.png" alt="G++" /></a></span>
-							<span><a href="www.twitter.com"><img src="{{site.baseurl}}/img/icons/icon-twitter.png" alt="Twitter" /></a></span>
-							<span><a href="www.linkedin.com"><img src="{{site.baseurl}}/img/icons/icon-linkedin.png" alt="LinkedIn" /></a></span>
+							<span><a href="https://facebook.com/" target="_blank"><img src="{{site.baseurl}}/img/icons/icon-facebook.png" alt="Facebook" /></a></span>
+							<span><a href="https://google.com" target="_blank"><img src="{{site.baseurl}}/img/icons/icon-google.png" alt="G++" /></a></span>
+							<span><a href="https://twitter.com" target="_blank"><img src="{{site.baseurl}}/img/icons/icon-twitter.png" alt="Twitter" /></a></span>
+							<span><a href="https://linkedin.com" target="_blank"><img src="{{site.baseurl}}/img/icons/icon-linkedin.png" alt="LinkedIn" /></a></span>
+							<span></span>
+							<span><a href="{{site.baseurl}}/portfolio.html" class="btn btn-success waves-effect waves-light">Hire me</a></span>
+							<span><a href="https://buymeacoffe.com/dataphile" class="btn brown waves-effect waves-light" target="_blank">Buy me coffee</a></span>
 						</div>
 						<br />
 						<blockquote><p><q>Welcome! I am excited you have visited my portfolio. Navigate through the pages to get acquainted on my skills. </q></p></blockquote>
