Updated MAYCentral project and added Refferal system project

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ meta: Discover me through portfolio
 					
 					<div class="col-md-8">
 						<h2 class="h2-responsive">Joseph Kamau</h2>
-						<h4>Fullstack Web/Mobile developer | Data analyst | Computer security enthusiast</h4>
+						<h4>Fullstack Web/Mobile developer | Data analyst | Cyber security enthusiast</h4>
 						<br />
 						<div class="social-icons">
 							<span><a href="https://facebook.com/" target="_blank"><img src="{{site.baseurl}}/img/icons/icon-facebook.png" alt="Facebook" /></a></span>
