Added portfolio down load links and Disabled unresponsive footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,10 @@ meta: Discover me through portfolio
 								<p><i class="fa fa-map-marker"></i> {{ site.data.resume-credentials[4].content }}</p>
 								<p><a href="#"><img src="{{site.baseurl}}/img/icons/icon-acrobat-reader.png" alt="pdf" width="20" height="20"/>Download Resume</a>
 								</p>
+								<p><a href="#"><img src="{{site.baseurl}}/img/icons/icon-acrobat-reader.png" alt="pdf" width="20" height="20"/>Download University recommendation letter</a>
+								</p>
+								<p><a href="#"><img src="{{site.baseurl}}/img/icons/icon-acrobat-reader.png" alt="pdf" width="20" height="20"/>Download University transcripts</a>
+								</p>
 								<p><a href="#"><img src="{{site.baseurl}}/img/icons/vcard.png" alt="pdf" width="20" height="20"/>Save vCard</a>
 								</p>
 							</div>
